# bani

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  mkdocs.yml  prompt.md  pyproject.toml  requirements-docs.txt
.github/workflows/: ci.yml  docs.yml  release.yml  site.yml
benchmarks/: conftest.py  test_transfer_throughput.py
docker/: freetds.conf
docs/: CNAME  changelog.md  decisions.md  getting-started.md  index.md
docs/api/: connectors.md  domain.md  index.md  sdk.md
docs/connectors/: index.md  mssql.md  mysql.md  oracle.md  postgresql.md  sqlite.md
docs/developer/: architecture.md  building-a-connector.md  contributing.md
docs/guides/: bdl-reference.md  cli-reference.md  configuration.md  docker.md  error-handling.md  incremental-sync.md  mcp-server.md  python-sdk.md  type-mappings.md  web-ui.md
examples/bdl/: README.md  chained-migration.bdl  custom-hooks.bdl  filtered-migration.bdl  incremental-sync.bdl  mssql-to-postgresql.bdl  multi-schema.bdl  mysql-to-mysql-upgrade.bdl  mysql-to-postgresql.bdl  oracle-to-postgresql.bdl  scheduled-nightly.bdl  sqlite-to-mysql.bdl
pkg_build/: Dockerfile.deb  bani-start.py  build_appimage.py  build_common.py  build_deb.py  build_macos.py  build_rpm.py  build_windows.py  deb.Dockerfile  fetch_python.py  launcher.m
scripts/: 00_setup.py  01_migrate_mysql_to_pg.py  02_migrate_mysql_to_mssql.py  03_migrate_mysql_to_oracle.py  04_migrate_mysql_to_sqlite.py  05_migrate_pg_to_mssql.py  06_migrate_pg_to_oracle.py  07_migrate_mssql_to_pg.py  08_migrate_mssql_to_oracle.py  09_migrate_oracle_to_pg.py  10_migrate_oracle_to_mssql.py  11_migrate_pg_to_mysql.py  12_migrate_mssql_to_mysql.py  13_migrate_oracle_to_mysql.py  14_migrate_sqlite_to_pg.py  15_migrate_sqlite_to_mysql.py  16_migrate_sqlite_to_mssql.py  17_migrate_sqlite_to_oracle.py  18_migrate_pg_to_sqlite.py  19_migrate_mssql_to_sqlite.py  20_migrate_oracle_to_sqlite.py  21_migrate_pg_to_mssql_sti.py  22_migrate_pg_to_mssql_sti_sdk.py  compare_row_counts.py  migrate.py  migrate_mysql_to_pg.py  run_all_migrations.sh
scripts/docker/: smoke_test.sh
site/: astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
site/public/: CNAME  robots.txt
site/src/components/: AICallout.astro  CloudTeaser.astro  CommunitySection.astro  ComparisonTable.astro  ConnectorCards.astro  DonateCTA.astro  FeatureGrid.astro  Footer.astro  Header.astro  Hero.astro
site/src/content/: config.ts
site/src/layouts/: Base.astro  Blog.astro
site/src/pages/: about.astro  cloud.astro  community.astro  donate.astro  features.astro  index.astro  roadmap.astro
site/src/styles/: global.css
src/bani/: __init__.py  __main__.py
src/bani/application/: active_migration.py  checkpoint.py  hook_runner.py  orchestrator.py  preview.py  progress.py  quarantine.py  run_log.py  scheduler.py  schema_remap.py  sync_engine.py
src/bani/bdl/: __init__.py  interpolator.py  parser.py  serializer.py  validator.py
src/bani/cli/: app.py  formatters.py
src/bani/connectors/: base.py  default_translation.py  pool.py  registry.py  value_coercion.py
src/bani/desktop/: menubar.py  tray.py
src/bani/domain/: __init__.py  delta.py  dependency.py  errors.py  pipeline.py  project.py  schema.py  type_mapping.py  validator.py
src/bani/infra/: config.py  connections.py  logging.py  os_scheduler.py
src/bani/mcp_server/: __init__.py  __main__.py  server.py  tools.py
src/bani/sdk/: __init__.py  bani.py  project_builder.py  schema_inspector.py
src/bani/ui/: __init__.py  auth.py  models.py  scheduler_registry.py  server.py  sse.py  websocket.py
tests/: __init__.py  test_default_translation.py  test_value_coercion.py
tests/fixtures/sample_bdl/: full-reference.bdl  hooks-and-schedule.bdl  incremental-sync.bdl  minimal.bdl  (+6 more)
tests/unit/: __init__.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  main.tsx
(+173 files in other folders)
