[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bani"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["pyarrow>=14.0", "lxml>=5.0", "jsonschema>=4.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/bani"]

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["bani"]

[tool.mypy]
python_version = "3.10"
strict = true
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["--strict-markers", "--tb=short", "-q"]
