[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bani"
version = "0.1.0"
description = "An open-source database migration engine powered by Apache Arrow"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
    { name = "David Mugume", email = "mugumedavid@gmail.com" },
]
keywords = ["database", "migration", "arrow", "etl"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
]
dependencies = [
    "pyarrow>=14.0",
    "psycopg[binary]>=3.1",
]

[project.urls]
Homepage = "https://bani.dev"
Documentation = "https://docs.bani.dev"
Repository = "https://github.com/mugumedavid/bani"

[project.scripts]
bani = "bani.cli.app:main"

[project.entry-points."bani.connectors"]
mysql = "bani.connectors.mysql:MySQLConnector"
postgresql = "bani.connectors.postgresql:PostgreSQLConnector"
mssql = "bani.connectors.mssql:MSSQLConnector"
oracle = "bani.connectors.oracle:OracleConnector"
sqlite = "bani.connectors.sqlite:SQLiteConnector"

[tool.hatch.build.targets.wheel]
packages = ["src/bani"]

# --- Ruff (Black-compatible formatting + isort) ---
[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "RUF",  # ruff-specific
]

[tool.ruff.lint.isort]
known-first-party = ["bani"]

# --- mypy (strict) ---
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true

# --- pytest ---
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "-q",
]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "benchmark: marks tests as performance benchmarks",
]
